# android-jni-support

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle
android-jni-support/: CMakeLists.txt  CMakelists.txt  android-jni-support.cmake  build.gradle  gradle.properties
android-jni-support/cmake/: CMakelists-distribution.txt  CMakelists.txt  android-jni-support.cmake
android-jni-support/src/androidTest/java/it/sephiroth/android_jni_support/: ExampleInstrumentedTest.java
android-jni-support/src/main/: AndroidManifest.xml
android-jni-support/src/main/cpp/includes/public/android-jni-support/: jni_all.hpp  jni_base_references.hpp  jni_binding_base.hpp  jni_bindings.hpp  jni_boxed.hpp  jni_config.hpp  jni_context.hpp  jni_conversions.hpp  jni_env.hpp  jni_exceptions.hpp  jni_file_manager.hpp  jni_helper.hpp  jni_invoke_adapter.hpp  jni_io.hpp  jni_locale.hpp  jni_logging.hpp  jni_macros.hpp  jni_references.hpp  jni_shared_preferences.hpp  jni_thread.hpp  jni_utils.hpp  jni_uuid.hpp  jni_value_adapter.hpp
android-jni-support/src/main/cpp/sources/: jni_boxed.cpp  jni_context.cpp  jni_env.cpp  jni_exceptions.cpp  jni_file_manager.cpp  jni_helper.cpp  jni_io.cpp  jni_locale.cpp  jni_logging.cpp  jni_references.cpp  jni_shared_preferences.cpp  jni_thread.cpp  jni_utils.cpp  jni_uuid.cpp  jni_value_adapter.cpp  main.cpp
android-jni-support/src/main/java/it/sephiroth/android_jni_support/: Library.kt
android-jni-support/src/main/res/values/: strings.xml
android-jni-support/src/test/java/it/sephiroth/android_jni_support/: ExampleUnitTest.java
android-jni-support/third-party-libs/uuid/: CMakelists.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/it/sephiroth/androidjnisupport/: ExampleInstrumentedTest.kt
app/src/main/cpp/: android_unittest.cc  android_unittest.hpp  jni_context_unittest.cc  native-lib.cpp  shared_preferences_unittest.cc
app/src/main/java/it/sephiroth/androidjnisupport/: GTestRunner.kt  MainActivity.kt
app/src/main/java/it/sephiroth/androidjnisupport/condition_matcher/: ConditionWatcher.kt
app/src/main/res/values/: strings.xml
app/src/test/java/it/sephiroth/androidjnisupport/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sample/: CMakeLists.txt  build.gradle  cdep.sha256  cdep.yml
sample/src/androidTest/java/it/sephiroth/androidjnisupport/: GTestInstrumented.java
sample/src/main/: AndroidManifest.xml
sample/src/main/cpp/: jni_references_unittest.cc  jni_utils_unittest.cc  jni_uuid_unittest.cc  native-lib.cpp  shared_preferences_unittest.cc
sample/src/main/java/it/sephiroth/androidjnisupport/: MainActivity.kt
sample/src/main/java/it/sephiroth/androidjnisupport/condition_matcher/: Instruction.kt
sample/src/main/res/layout/: activity_main.xml  content_main.xml
sample/src/main/res/values/: strings.xml
